# fastapi_react_youtube

./: README.md  package-lock.json  pyproject.toml
backend/src/: config.py  http_client.py  init.py  main.py  router.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: cryptocurrencyCard.jsx
