[tool.poetry]
name = "fastapi-react-youtube"
version = "0.1.0"
description = ""
authors = ["Vitalii <vitaly.savenko12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
pydantic-settings = "^2.7.1"
aiohttp = "^3.11.11"
uvicorn = "^0.34.0"
async-lru = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
